# PCHMI

./: README.md
QT_UIController/: CMakeLists.txt  Fonts.qrc  Images.qrc  Misc.qrc  jsonfile.qrc  main.cpp  main.qml  qml.qrc
QT_UIController/Core/: readme.txt
QT_UIController/Core/Infra/AlarmManager/: AlarmManager.cpp  AlarmManager.h
QT_UIController/Core/Infra/BIOWrapper/: BIOConfig.cpp  BIOConfig.h
QT_UIController/Core/Infra/BgCommThread/: BgCommThread.cpp  BgCommThread.h
QT_UIController/Core/Infra/COMM_Thread/: CommCyclicActivity.cpp  CommCyclicActivity.h  CommPeerInfo.cpp  CommPeerInfo.h  CommPeerWrapper.cpp  CommThread.cpp  CommThread.h
QT_UIController/Core/Infra/DataInterface/: BgDataInterfaceConfig_HMI.cpp  BgDataInterfaceConfig_HMI.h  DataInterfaceConfig_HMI.cpp  DataInterfaceConfig_HMI.h  PlatformConfig.cpp  PlatformConfig.h  ProductionScreen_MB.cpp
QT_UIController/Core/Infra/Logger/: ActiveAlarm.cpp  ActiveAlarm.h  AlarmConfig.cpp  AlarmConfig.h  AlarmLog.cpp  AlarmLog.h  DBLogger.cpp  DBLogger.h  DataLoggerManager.cpp  DataLoggerManager.h  EventLog.cpp  EventLog.h  LoggerTable.h  SerialLogger.cpp  SerialLogger.h  SysLogger.cpp  SysLogger.h
QT_UIController/Core/Infra/USBAuthentication/: USBAuthentication.cpp  USBAuthentication.h
QT_UIController/Core/Infra/WDSServer/: WDSServer.cpp  WDSServer.h
QT_UIController/Core/Logic/Back_End_Logic/Actuator_Setup_Screens/: ActuatorSetupData.cpp  ActuatorSetupData.h
QT_UIController/Core/Logic/Back_End_Logic/Alarm_Screens/: ActiveAlarmDetailsListData.cpp  ActiveAlarmDetailsListData.h  ActiveAlarmDetailsListModel.cpp  ActiveAlarmDetailsListModel.h  ActiveServiceReminderDetailsListData.cpp  ActiveServiceReminderDetailsListData.h  ActiveServiceReminderDetailsListModel.cpp  ActiveServiceReminderDetailsListModel.h
QT_UIController/Core/Logic/Back_End_Logic/Analytics_Screens/: AnalyticTableListData.cpp  AnalyticTableListData.h  AnalyticsScreenTableViewOptions.cpp  AnalyticsScreenTableViewOptions.h  CycleDetailTableModel.cpp  CycleDetailTableModel.h  CycleDetailsListData.cpp  CycleDetailsListData.h  CycleDetailsListModel.cpp  CycleDetailsListModel.h  GraphAxisDef.h  GraphSettings.cpp  GraphSettings.h  ReferenceWeldGraphData.cpp  ReferenceWeldGraphData.h  WeldGraphData.cpp  WeldGraphData.h
QT_UIController/Core/Logic/Back_End_Logic/Common_Logic/: ActiveScreen.cpp  ActiveScreen.h  DataLoggerLogic.cpp  DataLoggerLogic.h  DisplayModesHMI.cpp  DisplayModesHMI.h  SystemConfiguration.cpp  SystemConfiguration.h  SystemInformationInterface.cpp  SystemInformationInterface.h  SystemTypeDef.h  UnitConversionLogic.cpp  UnitConversionLogic.h  UpdateScreens.cpp  UpdateScreens.h  definition.h  uiscreendef.h
QT_UIController/Core/Logic/Back_End_Logic/Dashboard_Screens/: CommonUtils.h  DashBoardWelderListModel.cpp  DashBoardWelderListModel.h
QT_UIController/Core/Logic/Back_End_Logic/Date_Time_Settings_Screens/: DateTimeSettings.cpp  DateTimeSettings.h
QT_UIController/Core/Logic/Back_End_Logic/Diagnostics_Screens/: AlarmDetailsListData.cpp  AlarmDetailsListData.h  AlarmDetailsListModel.cpp  AlarmDetailsListModel.h  DiagnosticUserIo.cpp  DiagnosticUserIo.h  EventLogDetailsListModel.cpp  EventLogDetailsListModel.h  EventLogListData.cpp  EventLogListData.h  ScanCycleDetailsListData.cpp  ScanCycleDetailsListData.h  ScanCycleDetailsListModel.cpp  ScanCycleDetailsListModel.h  ScanGraphData.cpp  ScanGraphData.h  ScanGraphSettings.cpp  ScanGraphSettings.h  Seek.cpp  Seek.h  Test.cpp  (+9 more)
QT_UIController/Core/Logic/Common/: SystemType.cpp  SystemType.h
QT_UIController/Core/Logic/SC/: BransonServiceTab.cpp  BransonServiceTab.h  ConfigUtilityVersion.cpp  ConfigUtilityVersion.h  DateTimeConversion.cpp  DateTimeConversion.h  GlobalUserSetting.cpp  GlobalUserSetting.h  HornScanRecipe.cpp  HornScanRecipe.h  HornScanResult.cpp  HornScanResult.h  HornScanSignature.cpp  HornScanSignature.h  NetworkConfiguration.cpp  NetworkConfiguration.h  NetworkConfigurationEthernetIp.cpp  NetworkConfigurationEthernetIp.h  NfsManager.cpp  NfsManager.h  OpcuaClientCertificateUpload.cpp  OpcuaClientCertificateUpload.h  ReportManager.cpp  ReportManager.h  SeekRecipe.cpp  SeekRecipe.h  SeekResult.cpp  SeekResult.h  SeekSignature.cpp  SeekSignature.h  ServiceReminderManagement.cpp  ServiceReminderManagement.h  SoftwareUpgrade.cpp  SoftwareUpgrade.h  SystemConfigBransonService.cpp  SystemConfigBransonService.h  SystemInformation.cpp  SystemInformation.h  TestRecipe.cpp  TestRecipe.h  (+6 more)
QT_UIController/Data/: VirtualKeyboard.qrc  style.qml  style.qmlc
QT_UIController/Data/layouts/en_GB/: main.qml  main.qmlc  numbers.qml  numbers.qmlc  symbols.qml  symbols.qmlc
QT_UIController/Etc/: config.ini
QT_UIController/Json/: language.json
QT_UIController/Language/: DANISH.csv  ENGLISH.csv  FRENCH.csv  GERMAN.csv  ITALIAN.csv  JAPANESE.csv  KOREAN.csv  POLISH.csv  SIMPLIFIEDCHINESE.csv  SLOVAKIAN.csv  SPANISH.csv
QT_UIController/Misc/: applicationFilter.sh  applicationUpgrading.sh
QT_UIController/Platform/: readme.txt
QT_UIController/Platform/ACE/: readme.txt
QT_UIController/Platform/ACE/Infra/: readme.txt
QT_UIController/Platform/ACE/Logic/: readme.txt
QT_UIController/Platform/L20/: readme.txt
QT_UIController/Platform/L20/Infra/: readme.txt
QT_UIController/Platform/L20/Logic/: readme.txt
QT_UIController/Unit Test/: .project
QT_UIController/Unit Test/Infrastructure/BgCommThread/: BgCommTestCases.xlsx
QT_UIController/Unit Test/Infrastructure/Open SSL - BIO Wrapper Class Validation Using Threads/: Tests Description.xlsx
QT_UIController/Unit Test/Infrastructure/Test Codes With Multiple Scenarios/: BIO Wrapper Test Cases.xlsx
QT_UIController/Unit Test/Infrastructure/WDSServer/: test_details.xlsx
QT_UIController/Unit Test/Screens/Analytics-Graph Screens/: Analytics-Cycle Details List Test Description.xlsx  Analytics-Graph Auto Scaling Test Description.xlsx  Analytics-Graph Test Description.xlsx
QT_UIController/Unit Test/Screens/MultiWelderScreens/: HMILog.txt
QT_UIController/Unit Test/Screens/Production Screen/: Production Screen Tests Description.xlsx
(+560 files in other folders)
